--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,8 +8,8 @@
 		<body>
 			<nav>
 	    		<ul>
-	        		<li><a href="/">Home</a></li>
-		        	<li><a href="/experiments">Experiments</a></li>
+	        		<li><a href="/VITAE-Logs">Home</a></li>
+		        	<li><a href="/VITAE-Logs/experiments">Experiments</a></li>
 	    		</ul>
 			</nav>
 			<div class="container">
